k8s/talos/apps/test-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-app
  namespace: test-gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: local-bigd-no
  hostnames:
    - test.local.bigd.no
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: test-app
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
